# redistail

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.ralph/: redistail.md
docs/: smoketest.md
project_management/: 001-done-project-scaffold.md  002-done-connection-and-cli-args.md  002-todo-connection-and-cli-args.md  003-done-preflight-notifications-check.md  003-todo-preflight-notifications-check.md  004-done-keyspace-notification-stream.md  004-todo-keyspace-notification-stream.md  005-done-event-formatting-and-colors.md  005-todo-event-formatting-and-colors.md  006-done-filters-and-redaction.md  006-todo-filters-and-redaction.md  007-done-burst-collapse-handling.md  007-todo-burst-collapse-handling.md  008-todo-resume-from-cursor.md  009-todo-config-file-support.md  010-todo-tests-and-ci.md  011-todo-docs-and-readme.md  012-backlog-release-and-publish.md  013-backlog-tui-mode.md  014-backlog-value-level-filters.md  015-backlog-notifications.md  016-backlog-streams-consumer-mode.md  README.md
redistail/: __init__.py  cli.py  collapse.py  config.py  connection.py  events.py  filters.py  format.py  options.py  preflight.py  subscriber.py
scripts/: gen_demo_svg.py  smoketest-traffic.sh
tests/: test_cli_args.py  test_collapse.py  test_connection.py  test_events.py  test_filters.py  test_format.py  test_integration.py  test_preflight.py  test_smoke.py  test_subscriber.py
