[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redistail"
version = "0.1.0"
description = "Tail Redis key changes (SET/DEL/EXPIRE/HSET/...) with color in your terminal."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "redistail contributors" }]
keywords = ["redis", "keyspace-notifications", "monitor", "cli", "tail", "cdc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "redis>=5.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
    "testcontainers[redis]>=4.7",
    "fakeredis>=2.23",
]

[project.scripts]
redistail = "redistail.cli:main"

[project.urls]
Homepage = "https://github.com/example/redistail"
Issues = "https://github.com/example/redistail/issues"

[tool.hatch.build.targets.wheel]
packages = ["redistail"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: tests that require a live Redis (Docker / testcontainers)",
]

[tool.coverage.run]
source = ["redistail"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
